<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".ThirdLevel">

    <TextView
        android:id="@+id/pointsField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punkty"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/czas"
        android:layout_marginStart="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsField" />

    <TextView
        android:id="@+id/nameOfLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_4x4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/refreshNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_50"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/item_0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />
        <View
            android:id="@+id/item_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />
        <View
            android:id="@+id/item_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />
        <View
            android:id="@+id/item_9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_10"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_11"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_12"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />
        <View
            android:id="@+id/item_13"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_14"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />

        <View
            android:id="@+id/item_15"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            android:background="@color/white" />
    </GridLayout>

    <TextView
        android:id="@+id/recordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_record"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#10797A"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/center" />

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordField" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="#10797A"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center" />

</androidx.constraintlayout.widget.ConstraintLayout>